--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,17 @@ dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
-    "pydantic (>=2.11.4,<3.0.0)",
+    "pydantic[email] (>=2.11.4,<3.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
-    "python-jose (>=3.4.0,<4.0.0)"
+    "python-jose (>=3.4.0,<4.0.0)",
+    "streamlit (>=1.45.0,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
+    "sentry-sdk (>=2.27.0,<3.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "altair (>=5.5.0,<6.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "interrogate (>=1.7.0,<2.0.0)"
 ]
 
 
@@ -26,4 +34,5 @@ flake8 = "^7.2.0"
 bandit = "^1.8.3"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
+httpx = "^0.28.1"
 
