--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,7 +27,9 @@ jobs:
           poetry-version: '1.8.2'
 
       - name: Install dependencies
-        run: poetry install --no-interaction --no-root
+        run: | 
+          poetry lock [--no-update]
+          poetry install --no-interaction --no-root
         
       - name: Run flacke8 for main.py
         run: poetry run flake8 main.py  
