--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: | 
-          poetry lock [--no-update]
+          poetry lock --no-update
           poetry install --no-interaction --no-root
         
       - name: Run flacke8 for main.py
